<resources>
    <string name="app_name">Event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_hint">Enter a title for this event</string>
    <string name="title_label">Title</string>
    <string name="detail_label">Detail</string>
    <string name="detail_hint">Enter content</string>
    <string name="solve_label">Solved</string>
</resources>
