<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="fpt.petcare.android.event.EventFragment">

    <TextView
        android:id="@+id/title_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/title_label"/>

    <EditText
        android:id="@+id/title_id"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"/>

    <TextView
        android:id="@+id/detail_label"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/detail_label"
        />

    <EditText
        android:id="@+id/detail_id"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:hint="@string/detail_hint"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="showEvent"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/solve_label"
        />
</LinearLayout>
